# fastapi_ecommerce_backend

./: .gitignore  .vars  ForsitEcommerce.json  README.md  dev.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 16d3d11a6e33_create_inventory_table.py  2d2131d3d3b4_init_db.py  390525f688bc_create_sale_table.py  5d13e38410ac_create_inventory_table.py  6eb850d6baa3_create_product_table.py  e1637e959b33_create_user_table.py
api/: base_resource.py  base_routing.py
api/v1/: routing.py
api/v1/endpoints/: add_inventory.py  create_category.py  create_product.py  get_categories.py  get_low_stock_products.py  get_product.py  get_products.py  get_sales_data.py  login_user.py  purchase_products.py  register_user.py
api/v1/schemas/: add_inventory.py  create_category.py  create_product.py  get_categories.py  get_low_stock_products.py  get_product.py  get_products.py  get_sales_data.py  login_user.py  purchase_products.py
common/: schemas.py  types.py
common/data/: dummy.py  randomize_sale.py
core/: json.py  logger.py  security.py
crud/: __init__.py  base.py  category.py  inventory.py  product.py  sale.py  sale_item.py  user.py
crud/schemas/: __init__.py  category.py  inventory.py  product.py  sale.py  sale_item.py  user.py
db/: base.py  base_class.py  dependency.py  session.py
instance/: config.py
middlewares/: __init__.py  authentication.py  request.py
models/: category.py  inventory.py  product.py  sale.py  sale_item.py  user.py
